frontend/src/index.css
/* ... */
[data-theme="light"] {
  --theme-loader: #000000;
  --theme-bg-primary: #ffffff;
  --theme-bg-secondary: #ffffff;
  --theme-bg-sidebar: #edf2fa;
  --theme-bg-container: #f9fbfd;
  --theme-popup-menu-bg: #c2e7fe;

  --theme-bg-chat: #ffffff;
  --theme-bg-chat-input: #eaeaea;
  --theme-text-primary: #0e0f0f;
  --theme-text-secondary: #7a7d7e;
  --theme-placeholder: #9ca3af;
  --theme-sidebar-item-default: #ffffff;
  --theme-sidebar-item-selected: #ffffff;
  --theme-sidebar-item-hover: #c8efff;

  --theme-sidebar-item-text-inactive: #7a7d7e;
  --theme-sidebar-item-text-active: #184558;

  --theme-sidebar-item-workspace-active: #000000;
  --theme-sidebar-item-workspace-inactive: #7a7d7e;

  --theme-sidebar-subitem-default: transparent;
  --theme-sidebar-subitem-selected: #e2e7ee;
  --theme-sidebar-thread-selected: #ffffff;
  --theme-sidebar-subitem-hover: #e2e7ee;
  --theme-sidebar-border: #d3d4d4;

  --theme-sidebar-footer-icon: #ffffff;
  --theme-sidebar-footer-icon-fill: #6e6f6f;
  --theme-sidebar-footer-icon-hover: #d8d6d6;

  --theme-chat-input-border: #cccccc;
  --theme-action-menu-bg: #eaeaea;
  --theme-action-menu-item-hover: rgba(0, 0, 0, 0.1);
  --theme-settings-input-bg: #edf2fa;
  --theme-settings-input-placeholder: rgba(0, 0, 0, 0.5);
  --theme-settings-input-active: rgb(0 0 0 / 0.2);
  --theme-settings-input-text: #0e0f0f;
  --theme-modal-border: #d3d3d3;

  --theme-button-primary: #0ba5ec;
  --theme-button-primary-hover: #dedede;

  --theme-button-cta: #7cd4fd;

  --theme-file-row-even: #f5f5f5;
  --theme-file-row-odd: #e9e9e9;
  --theme-file-row-selected-even: #0ba5ec;
  --theme-file-row-selected-odd: #0ba5ec;
  --theme-file-picker-hover: #e2e7ee;

  --theme-home-text: #0e0f0f;
  --theme-home-text-secondary: #6f6f71;
  --theme-home-bg-card: #edf2fa;
  --theme-home-bg-button: #f3f4f6;
  --theme-home-border: rgba(0, 0, 0, 0.1);
  --theme-home-button-primary: #36bffa;
  --theme-home-button-primary-hover: rgba(54, 191, 250, 0.9);
  --theme-home-button-secondary: #dbe8fe;
  --theme-home-button-secondary-hover: #b0c8f1;
  --theme-home-button-secondary-text: #293056;
  --theme-home-button-secondary-hover-text: #293056;
  --theme-home-update-card-bg: #edf2fa;
  --theme-home-update-card-hover: #f3f4f6;
  --theme-home-update-source: #0284c7;

  --theme-checklist-item-bg: #c7e2ee;
  --theme-checklist-item-bg-hover: #a3d9f1;
  --theme-checklist-item-text: #0d3851;
  --theme-checklist-item-completed-bg: #d8f3ea;
  --theme-checklist-item-completed-text: #039855;
  --theme-checklist-checkbox-fill: #6ce9a6;
  --theme-checklist-checkbox-text: #ffffff;
  --theme-checklist-item-hover: #0ba5ec;
  --theme-checklist-checkbox-border: #6b7280;
  --theme-checklist-button-border: #0ba5ec;
  --theme-checklist-button-text: #0ba5ec;
  --theme-checklist-button-hover-bg: rgba(11, 165, 236, 0.1);
  --theme-checklist-button-hover-border: rgba(11, 165, 236, 0.8);

  --theme-home-button-secondary-border-hover: #293056;

  --theme-attachment-bg: #edf2fa;
  --theme-attachment-error-bg: rgba(180, 35, 24, 0.3);
  --theme-attachment-success-bg: #eaeaea;
  --theme-attachment-text: #0e0f0f;
  --theme-attachment-text-secondary: rgba(0, 0, 0, 0.8);
  --theme-attachment-icon: #ffffff;
  --theme-attachment-icon-spinner: #7cd4fd;
  --theme-attachment-icon-spinner-bg: #ffffff;

  --theme-button-text: #a8a9ab;
  --theme-button-code-hover-text: #0ba5ec;
  --theme-button-code-hover-bg: #e8f7fe;
  --theme-button-disable-hover-text: #854708;
  --theme-button-disable-hover-bg: #fef7e6;
  --theme-button-delete-hover-text: #b42318;
  --theme-button-delete-hover-bg: #fee4e2;
}

[data-theme="light"] .text-white {
  color: var(--theme-text-primary);
}

[data-theme="light"] .text-description,
[data-theme="light"] .text-white\/60 {
  color: var(--theme-text-secondary);
}

[data-theme="light"] .bg-theme-bg-secondary {
  border: 1px solid var(--theme-sidebar-border);
}

[data-theme="light"] .border-white\/10 {
  border-color: var(--theme-sidebar-border);
}

/*
This is to override the default border color for the select and input elements
in the onboarding flow when the theme is not light. This only applies to the
onboarding flow since its background is dark and is the same fill as the inputs.
*/
[data-layout="onboarding"] > * select:not([data-theme="light"]),
[data-layout="onboarding"] > * input:not([data-theme="light"]),
[data-layout="onboarding"] > * textarea:not([data-theme="light"]) {
  border: 1px solid #ffffff;
}

html,
body {
  padding: 0;
  margin: 0;
  font-family:
    "plus-jakarta-sans",
    -apple-system,
    BlinkMacSystemFont,
    Segoe UI,
    Roboto,
    Oxygen,
    Ubuntu,
    Cantarell,
    Fira Sans,
    Droid Sans,
    Helvetica Neue,
    sans-serif;
  background-color: white;
}

@media (prefers-color-scheme: dark) {
  body {
    background-color: #0e0f0f;
  }
}

@media (max-width: 600px) {
  html {
    overscroll-behavior: none;
  }
}

a {
  color: inherit;
  text-decoration: none;
}

* {
  box-sizing: border-box;
}

.g327 {
  border-color: #302f30;
}

@font-face {
  font-family: "plus-jakarta-sans";
  src: url("../public/fonts/PlusJakartaSans.ttf");
  font-display: swap;
}

.grr {
  grid-template-columns: repeat(2, 1fr);
}

.greyC {
  filter: gray;
  -webkit-filter: grayscale(100%);
  transition: 0.4s;
}

.greyC:hover {
  filter: none;
  -webkit-filter: none;
  transition: 0.4s;
}

.chat__message {
  transform-origin: 0 100%;
  transform: scale(0);
  animation: message 0.15s ease-out 0s forwards;
  animation-delay: 500ms;
}

@keyframes message {
  0% {
    max-height: 100%;
  }

  80% {
    transform: scale(1.1);
  }

  100% {
    transform: scale(1);
    max-height: 100%;
    overflow: visible;
    padding-top: 1rem;
  }
}

.doc__source {
  opacity: 0;
  animation-delay: 50ms;
  animation: citationAnimation 0.15s ease-out 0s forwards;
}

@keyframes citationAnimation {
  0% {
    opacity: 0;
  }

  80% {
    opacity: 0.5;
  }

  100% {
    opacity: 1;
  }
}
/* ... */

